--- a/babybuddy/templates/babybuddy/form.html
+++ b/babybuddy/templates/babybuddy/form.html
@@ -1,9 +1,12 @@
 {% load i18n widget_tweaks %}
 
+{# Load any form-javascript files #}
+{{ form.media.js }}
 <div class="container-fluid pb-5">
     <form role="form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
+            {{ field.widget }}
             <div class="form-group row">
                 {% include 'babybuddy/form_field.html' %}
             </div>
