Set base design for error response templates

--- a/babybuddy/templates/error/base.html
+++ b/babybuddy/templates/error/base.html
@@ -1,13 +1,16 @@
 {% extends 'babybuddy/base.html' %}
-{% load i18n widget_tweaks %}
+{% load i18n static %}
 
 {% block breadcrumb_nav %}{% endblock %}
 
 {% block page %}
-    <div class="container mt-2 mt-lg-5">
+    <div class="container mt-2 mt-lg-4">
         <div class="row justify-content-md-center">
             <div class="col-lg-12 mb-4">
-                {% block content %}{% endblock %}
+                <div class="d-sm-flex">
+                    <img class="d-inline-block align-self-center mr-2 text-center" src="{% static "babybuddy/logo/logo-sad.png" %}" width="65" height="65">
+                    <div class="p-2 flex-grow-1">{% block content %}{% endblock %}</div>
+                </div>
             </div>
         </div>
     </div>
