--- a/babybuddy/static_src/fontello/css/babybuddy-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-codes.css
@@ -39,3 +39,4 @@
 .icon-today:before { content: '\f274'; } /* '' */
 .icon-bmi:before { content: '\f295'; } /* '' */
 .icon-temperature:before { content: '\f2c8'; } /* '' */
+.icon-breastpump:before { content: '\f4a7'; } /* '' */
