--- a/babybuddy/static_src/fontello/css/babybuddy-ie7-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-ie7-codes.css
@@ -39,3 +39,4 @@
 .icon-today { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf274;&nbsp;'); }
 .icon-bmi { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf295;&nbsp;'); }
 .icon-temperature { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf2c8;&nbsp;'); }
+.icon-breastpump { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf4a7;&nbsp;'); }
